# clawgovern

./: .gitignore  README.md  audit_bg.out  compliance_report.html  enterprise_policy.yaml  example_agents.yaml  main.py  pyproject.toml
clawgovern.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
policies/: eu-ai-act.yaml  startup-cost-control.yaml  strict-soc2.yaml
src/: main.py
src/clawgovern.egg-info/: SOURCES.txt  top_level.txt
